--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,12 @@
     <version>1.0-SNAPSHOT</version>
     <packaging>war</packaging>
 
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <java.version>1.8</java.version>
+    </properties>
+
     <dependencies>
         <!-- Lombok -->
         <dependency>
@@ -36,5 +42,4 @@
             <version>5.1.3.RELEASE</version>
         </dependency>
     </dependencies>
-
 </project>
