--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,10 @@
             <artifactId>freemarker</artifactId>
             <version>2.3.28</version>
         </dependency>
-
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>3.1.0</version>
+        </dependency>
     </dependencies>
 </project>
