--- a/pom.xml
+++ b/pom.xml
@@ -66,5 +66,10 @@
             <artifactId>spring-jdbc</artifactId>
             <version>5.0.9.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.12</version>
+        </dependency>
     </dependencies>
 </project>
